Fix header responsive gap

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -55,7 +55,7 @@ header {
 
         .header__nav {
             ul {
-                gap: 40px;
+                gap: 20px;
 
                 a {
                     font-size: 12px;
